fixed spacing stuff, overall styles, height stuff, and optimized certain styles

--- a/styles/current.css
+++ b/styles/current.css
@@ -3,22 +3,47 @@ body {
   padding-bottom: 100px;
   background-color: rgb(17, 17, 17);
   max-width: 100%;
-  overflow-x: hidden;
+}
+
+.body-section {
+  display: flex;
+  position: absolute;
+  top: 175px;
+  margin-left: 50px;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .body-text-container {
-  position: absolute;
-  top: 200px;
+  width: 60%;
   border-style: solid;
+  border-width: 1px;
   border-color: white;
   background-color: black;
-  border-radius: 16px;
-  margin-left: 120px;
-  margin-right: 120px;
-  padding-left: 15px;
+  padding: 15px;
+  margin-top: 30px;
+  margin-left: 100px;
 }
 
 .body-text {
+  font-weight: bold;
   font-size: 20px;
-  background-color: black;
+  margin: 0;
+}
+
+.body-pictures-grid {
+  padding-left: 0;
+  width: 50%;
+  row-gap: 15px;
+  margin: 0;
+  margin-left: 250px;
+  margin-top: 30px;
+}
+
+.body-picture {
+  height: auto;
+  width: auto/9;
+  max-height: 350px;
+  max-width: 400px;
+  object-fit: cover;
 }
