--- a/styles/research.css
+++ b/styles/research.css
@@ -3,42 +3,33 @@ body {
   padding-bottom: 100px;
   background-color: rgb(17, 17, 17);
   max-width: 100%;
-  overflow-x: hidden;
-}
-
-.project-title {
-  position: absolute;
-  top: 30px;
-  width: 100%;
-  z-index: 101;
-}
-
-.project-title-text {
-  font-size: 50px;
-  text-align: center;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .research-project-container {
-  padding-top: 250px;
+  padding-top: 220px;
 }
 
 .research-project-flexbox {
   display: flex;
-  column-gap: 100px;
+  column-gap: 120px;
   justify-content: center;
+  max-width: 100%;
 }
 
 .research-project-desc-container {
   background-color: black;
-  width: 500px;
+  max-width: 550px;
   border-style: solid;
   border-color: white;
   border-radius: 16px;
-  padding: 20px;
+  border-width: 1px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 0px;
-  padding-bottom: 0px;
+  height: auto;
+  padding-bottom: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .research-text {
@@ -46,35 +37,30 @@ body {
 }
 
 .research-paper {
-  height: 500px;
+  height: 525px;
   width: 500px;
   border-radius: 16px;
 }
 
-.project-title-after {
-  margin-top: 200px;
-  width: 100%;
-  z-index: 101;
-}
-
-.research-project-container-after {
-  margin-top: 60px;
+.video {
+  padding-top: 50px;
 }
 
 .research-image {
-  width: 500px;
-  height: 250px;
-  padding-top: 125px;
-  padding-bottom: 125px;
+  padding-top: 50px;
+  height: 430px;
+  width: 530px;
+  object-fit: cover;
+  align-self: center;
 }
 
 .button-display-grid {
   display: grid;
-  grid-template-columns: 300px 300px 300px;
-  column-gap: 125px;
-  row-gap: 150px;
+  grid-template-columns: 275px 275px 275px;
+  column-gap: 130px;
+  row-gap: 100px;
   padding-top: 200px;
-  margin-left: 200px;
+  margin-left: 190px;
 }
 
 .dropdown {
@@ -114,11 +100,12 @@ body {
 .acd-button,
 .beaverworks-button,
 .cybersecurity-button {
-  height: 160px;
-  width: 200px;
+  height: 200px;
+  width: 275px;
   padding: 50px;
   object-fit: cover;
   border: none;
+  background-size: cover;
 }
 
 .pawpaw-button {
